--- a/Client/Pages/ProfilePage.razor
+++ b/Client/Pages/ProfilePage.razor
@@ -16,14 +16,32 @@
 @if (onInitializedOver)
 {
     <div id="topOptBar">
-        <button class="backArrow" @onclick="goToFormerPage"><img src="../css/images/back-repeated.svg" /></button>
-        <h3>הפרופיל של @currentUser.firstName @currentUser.lastName</h3>
-        <div class="outerOptions">
-            <button class="optionButton editButton" @onclick="editProfile">
-                <img src="../css/images/edit_pencil.svg" class="icon" />
-                עריכה
-            </button>
+        <div class="megaOuterTopSection">
+            <div class="outerTopSection">
+                <div>
+
+                    <button class="backArrow" @onclick="goToFormerPage"><img src="../css/images/back-repeated.svg" /></button>
+                </div>
+
+                <h3 class="myProfileText">הפרופיל של @currentUser.firstName @currentUser.lastName</h3>
+                <div>
+                    <button class="options" @onclick="()=>OptionsBtnProfileClicked=!OptionsBtnProfileClicked"><img src="../css/images/option menu.svg" /></button>
+                </div>
+                @if (OptionsBtnProfileClicked)
+                {
+                    <div class="outerOptions">
+                        <button class="optionButton editButton" @onclick="editProfile">
+                            <img src="../css/images/edit_pencil.svg" class="icon" />
+                            עריכה
+                        </button>
+                    </div>
+                }
+
+            </div>
         </div>
+
+
+
         <div id="mainUserInfo">
             @if (editBtnClicked)
             {
@@ -99,36 +117,56 @@
             }
             else
             {
-                <div>@currentUser.profilePicOrIcon</div>
-                <div>@currentUser.firstName @currentUser.lastName</div>
+                <div class="outerSecondSection">
 
-                <AuthorizeView>
-                    <Authorized>
-                        <div>@context.User.Identity.Name</div>
-                    </Authorized>
-                </AuthorizeView>
+                    <div class="profileAndStreak">
 
-                <br />
-                <button @onclick="goToStreakPage">צפייה בהתקדמות שלי</button>
+                        <button class="profilePic">@currentUser.profilePicOrIcon</button>
+                        <div class="myProfileText">@currentUser.firstName @currentUser.lastName</div>
+
+                        <AuthorizeView>
+                            <Authorized>
+                                <div>@context.User.Identity.Name</div>
+                            </Authorized>
+                        </AuthorizeView>
+                    </div>
+                </div>
+
+
+
+                <button class="progressBtn" @onclick="goToStreakPage">צפייה בהתקדמות שלי</button>
 
 
             }
 
         </div>
     </div>
-    <div>
-        <div>יום תחילת תזרים:</div>
-        <div>
-            <div>
-                @if (startMonthDate > 0)
-                {
-                    <span> ה - @startMonthDate לחודש</span>
-                }
-                else
-                {
-                    <span> ה - @currentUser.monthStartDate לחודש</span>
-                }
+    <div class="outerThirdSection">
+
+        <div class="outerTitleAndStartDay">
+            <div class="outerText">
+                <span class="titleName">יום תחילת תזרים:</span>
+
             </div>
+        </div>
+        <div class="outerDay">
+            <div class="dayBox">
+                <div>
+                    @if (startMonthDate > 0)
+                    {
+                        <span> ה - @startMonthDate לחודש</span>
+                    }
+                    else
+                    {
+                        <span> ה - @currentUser.monthStartDate לחודש</span>
+                    }
+                </div>
+            </div>
+
+        </div>
+
+        <div>
+
             @if (editBtnClicked)
             {
                 <div>
@@ -143,13 +181,32 @@
             }
         </div>
     </div>
-    <div>
-        <div>תאריך הרשמה:</div>
 
-        <div>@currentUser.signUpDate.ToString("dd/MM/yyyy")</div>
+    <div>
+
+        <div class="outerTitleAndStartDay">
+            <div class="outerText">
+                <span class="titleName">תאריך הרשמה:</span>
+
+            </div>
+        </div>
+        <div class="outerDay">
+            <div class="dayBox">
+                <div>
+                    <span>@currentUser.signUpDate.ToString("dd/MM/yyyy")</span>
+                </div>
+            </div>
+
+        </div>
     </div>
     <div>
-        <div>התגיות שלי</div>
+
+        <div class="outerTitleAndStartDay">
+            <div class="outerText">
+                <span class="titleName">התגיות שלי</span>
+            </div>
+        </div>
+
         <div>
             @if (editBtnClicked)
             {
@@ -157,32 +214,34 @@
                 <br />
             }
         </div>
-        <div class="outerGalleryAndNav">
-            <div class="outerGallery">
+        <div class="outerDay">
+            <div class="outerTagsProfile">
+                <div class="outerGalleryAndNav">
+                    <div class="outerGallery">
 
-                @if (currentUser.userTags.Count > 0)
-                {
-                    foreach (TagsToShow tag in currentUser.userTags)
-                    {
-                        var fontWeight = (chosenTag == tag) ? "font-weight: 600;" : "";
-                        <button class="tag"
-                    @onclick="(() => ChooseTagForTrans(tag))"
-                    style="background-color:@tag.tagColor; @fontWeight">
-                            @tag.tagTitle
-                        </button>
-                        @if (editBtnClicked)
+                        @if (currentUser.userTags.Count > 0)
                         {
-                            <button class="options" @onclick="()=>OptionsBtnClicked=!OptionsBtnClicked"><img src="../css/images/option menu.svg" /></button>
+                            foreach (TagsToShow tag in GetCurrentPageTags())
+                            {
+                                var fontWeight = (chosenTag == tag) ? "font-weight: 600;" : "";
+                                <button class="tag"
+                            @onclick="(() => ChooseTagForTrans(tag))"
+                            style="background-color:@tag.tagColor; @fontWeight">
+                                    @tag.tagTitle
+                                </button>
+                                @if (editBtnClicked)
+                                {
+                                    <button class="options" @onclick="()=>OptionsBtnClicked=!OptionsBtnClicked"><img src="../css/images/option menu.svg" /></button>
+                                }
+
+                            }
+
+                            if (OptionsBtnClicked)
+                            {
+                                <OptionsMenuComponent editBtnClicked="openEditOrAddTagOverlay" deleteBtnClicked="callDeleteWarning" closeOverlay="()=>openDeleteTagWarning(true)"></OptionsMenuComponent>
+                            }
                         }
-
-                    }
-
-                    if (OptionsBtnClicked)
-                    {
-                        <OptionsMenuComponent editBtnClicked="openEditOrAddTagOverlay" deleteBtnClicked="callDeleteWarning" closeOverlay="()=>openDeleteTagWarning(true)"></OptionsMenuComponent>
-                    }
-
-
+                    </div>
                     <div class="outerBtnAndDots">
                         <button class="galleryArrow @disBtnStyle" @onclick="PreviousPage"><img src="../css/images/arrow-back.svg" /></button>
                         <div class="pageDots">
@@ -194,32 +253,43 @@
                         <button class="galleryArrow @disNextBtnStyle" @onclick="NextPage"><img src="../css/images/arrow-next.svg" /></button>
 
                     </div>
-                }
 
+                </div>
             </div>
         </div>
     </div>
 }
 
 
-<div>
+<div class="megaOuterOn">
     @if (editBtnClicked)
     {
-        <br />
+
         <button @onclick="(()=>saveEditedProfile(currentUser))">שמירה וחזרה</button>
     }
     else
     {
-        <div>מעבר מחדש על ההדרכה</div>
-        <div>
-            <button class="dropDownOptionBtn">סביבת ‘מבט אל העבר’</button>
-            <div class="divider"></div>
-            <button class="dropDownOptionBtn">סביבת ‘מבט אל ההווה’</button>
-            <div class="divider"></div>
-            <button class="dropDownOptionBtn">סביבת ‘מבט אל העתיד’</button>
+        <div class="outerOn">
+            <div class="outerOnbaordings">
+                <div class="outerDropAndPoly" @onclick="()=> openOnbaordings =! openOnbaordings">
+                    <div>מעבר מחדש על ההדרכה</div>
+                    <img src="../css/images/arrow3.svg" />
+                </div>
+            </div>
+            @if (openOnbaordings)
+            {
+                <div class="onBoardings">
+                    <button class="dropDownOptionBtn" @onclick="(() => chosenOnboarding = firstOn)">סביבת ‘מבט אל העבר’</button>
+                    <div class="divider"></div>
+                    <button class="dropDownOptionBtn" @onclick="(() => chosenOnboarding = secondOn)">סביבת ‘מבט אל ההווה’</button>
+                    <div class="divider"></div>
+                    <button class="dropDownOptionBtn" @onclick="(() => chosenOnboarding = thirdOn)">סביבת ‘מבט אל העתיד’</button>
+                </div>
+            }
+            <br />
+            <button @onclick="BeginSignOut">התנתקות מהמערכת</button>
+
         </div>
-        <br />
-        <button @onclick="BeginSignOut">התנתקות מהמערכת</button>
     }
 
 </div>
@@ -295,9 +365,9 @@
             }
             else
             {
-                 <button @onclick="updateTag" disabled>שמירה וסיום</button>
+                <button @onclick="updateTag" disabled>שמירה וסיום</button>
             }
-            
+
         }
         else
         {
@@ -340,11 +410,16 @@
     public int startMonthDate = 0;
     string newFirstName = "";
     string newLastName = "";
+    string chosenOnboarding = "";
+    string firstOn = "סביבת מבט אל העבר";
+    string secondOn = "סביבת מבט אל ההווה";
+    string thirdOn = "סביבת מבט אל העתיד";
 
 
     //Tag gallery variables:
     TagsToShow chosenTag = new TagsToShow();
     bool disBtn = false;
+    bool openOnbaordings = false;
     bool disNextBtn = false;
     bool isTagChosen = false;
     string disBtnStyle => disBtn ? "disBtn" : "";
@@ -353,7 +428,7 @@
 
     private int currentPage = 0;
     private int pageSize = 6;
-    private int totalPages => (int)Math.Ceiling(currentUser.userTags.Count / (double)pageSize);
+
 
     //Emoji keyboard:
     private bool isVisible = false;
@@ -385,11 +460,24 @@
     private string visibilityClass => isVisible ? "visible" : "";
     private string selectedCategory = "כללי";
 
+    private int totalPages => (int)Math.Ceiling(currentUser.userTags.Count / (double)pageSize);
+    private List<TagsToShow> GetTags()
+    {
+        // Fetch or generate your list of tags
+        return new List<TagsToShow>
+        {
+            new TagsToShow { id = 1, tagTitle = "Tag1", tagColor = "#ff0000" },
+            new TagsToShow { id = 2, tagTitle = "Tag2", tagColor = "#00ff00" },
+            // Add more tags as needed
+        };
+    }
+
     public bool editTag = false;
     TagsToShow tagToEdit = new TagsToShow();
     string selectedClass = "";
     bool deleteTagWarning = false;
     bool OptionsBtnClicked = false;
+    bool OptionsBtnProfileClicked = false;
 
     int tagTitleInputLength = 0;
 
@@ -420,7 +508,7 @@
             }
             newFirstNameLength = currentUser.firstName.Length;
             newLastNameLength = currentUser.lastName.Length;
-         
+
             onInitializedOver = true;
         }
     }
@@ -457,28 +545,19 @@
     {
         if (currentPage > 0)
         {
-            disNextBtn = false;
-            disBtn = false;
             currentPage--;
+            disBtn = currentPage == 0;
+            disNextBtn = false;
         }
-        if (currentPage == 0)
-        {
-            disBtn = true;
-        }
-
     }
 
     private void NextPage()
     {
         if (currentPage < totalPages - 1)
         {
-            disBtn = false;
-            disNextBtn = false;
             currentPage++;
-        }
-        if (currentPage == totalPages - 1)
-        {
-            disNextBtn = true;
+            disNextBtn = currentPage == totalPages - 1;
+            disBtn = false;
         }
     }
     private async Task BeginSignOut(MouseEventArgs args)
@@ -487,6 +566,12 @@
         Nav.NavigateTo($"authentication/logout");
     }
 
+    private IEnumerable<TagsToShow> GetCurrentPageTags()
+    {
+        return currentUser.userTags
+            .Skip(currentPage * pageSize)
+            .Take(pageSize);
+    }
 
     public void editProfile()
     {
