תיקון חריגה לאחר שינוי תקציב של תת קטגוריה בעמוד הבית

--- a/Client/Components/SubCategoryComponent.razor
+++ b/Client/Components/SubCategoryComponent.razor
@@ -28,10 +28,10 @@
                     @subCategoryTitle
 
                 </h3>
-                @if (totalSpendings > budget && categoryTypeIndicator==false)
+                @if (totalSpendings > budget && categoryTypeIndicator == false || overdraftNotTreated==true)
                 {
                     isOverdraft = true;
-                    <span>⚠️</span>
+                    <button @onclick="triggerOverdraftOverlay">⚠️</button>
                 }
             </div>
 
@@ -75,7 +75,7 @@
 
 @if (openTransOverlay)
 {
-    <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCategoryIDToGet" isTransactionOverlayOpen="@openAddTransOverlay" userID="@userID" gapsToUpdateBudgets="gapsToUpdateTheBudget" addTransactionToTotal="addNewTransToTotalSpendings" categoryTypeIndicator="@categoryTypeIndicator" updatedStreak="updateStreak" closeAddTransAfterOverdraft="closeAddTrans" ></AddTransactionComponent>
+    <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCategoryIDToGet" isTransactionOverlayOpen="@openAddTransOverlay" userID="@userID" gapsToUpdateBudgets="gapsToUpdateTheBudget" addTransactionToTotal="addNewTransToTotalSpendings" categoryTypeIndicator="@categoryTypeIndicator" updatedStreak="updateStreak" closeAddTransAfterOverdraft="closeAddTrans"></AddTransactionComponent>
 
 }
 
@@ -89,97 +89,108 @@
                 <button class="modal-close-btn" @onclick="() => editSubCatBtnClicked = !editSubCatBtnClicked"><img src="../css/images/close x.svg" /></button>
                 <h2 class="subCatTitle">עריכת תת קטגוריה</h2>
 
-
-
-                <div class="editAndAddSubCat">
-                    @if (userCategories.Count > 0)
-                    {
-                        <span>העברת תת קטגוריה ל</span>
-                        @if (subCatToEdit.categroyTitle == null)
+                @if (!categoryTypeIndicator)
+                {
+                    <div class="editAndAddSubCat">
+                        @if (userCategories.Count > 0)
                         {
-                            subCatToEdit.categroyTitle = categoryTitle;
+                            <span>העברת תת קטגוריה ל</span>
+                            @if (subCatToEdit.categroyTitle == null)
+                            {
+                                subCatToEdit.categroyTitle = categoryTitle;
+                            }
+                            <select class="catsDropDown" @bind="subCatToEdit.categroyTitle">
+
+
+                                @foreach (AllUserCategories userCategory in userCategories)
+                                {
+
+                                    <option class="catsOptions" value=@userCategory.categroyTitle> @userCategory.categroyTitle</option>
+
+                                }
+                            </select>
                         }
-                        <select class="catsDropDown" @bind="subCatToEdit.categroyTitle">
+                    </div>
 
+                    <div class="outerTitleName">
+                        <label class="titleName" for="amount">שם תת קטגוריה</label>
+                        <input class="titleBox" type="text" id="amount" placeholder="שם תת הקטגוריה" @bind="subCatToEdit.subCategoryTitle" />
+                    </div>
 
-                            @foreach (AllUserCategories userCategory in userCategories)
-                            {
-
-                                <option class="catsOptions" value=@userCategory.categroyTitle> @userCategory.categroyTitle</option>
-
-                            }
-                        </select>
-                    }
-                </div>
-
-                <div class="outerTitleName">
-                    <label class="titleName" for="amount">שם תת קטגוריה</label>
-                    <input class="titleBox" type="text" id="amount" placeholder="שם תת הקטגוריה" @bind="subCatToEdit.subCategoryTitle" />
-                </div>
-
-                <label class="titleName" for="description">מה התקציב החודשי שלך עבור "@subCatToEdit.subCategoryTitle"?</label>
-                <div class="outerBudget">
-                    <input class="budgetBox" type="number" id="description" placeholder="0" @bind="subCatToEdit.monthlyPlannedBudget" @onfocusout="calculateBudgetChange" />
-                    <span class="currency-symbol">₪</span>
-                    <br/>
-                    @if(ogBudget<0){
-                        <span>הקטנת את התקציב ב- @(ogBudget*-1)%.</span>
-                        <br/>
-                    }
-                    else if(ogBudget>0)
-                    {
-                        <span>הגדלת את התקציב ב-@ogBudget%.</span>
+                    <label class="titleName" for="description">מה התקציב החודשי שלך עבור "@subCatToEdit.subCategoryTitle"?</label>
+                    <div class="outerBudget">
+                        <input class="budgetBox" type="number" id="description" placeholder="0" @bind="subCatToEdit.monthlyPlannedBudget" @onfocusout="calculateBudgetChange" />
+                        <span class="currency-symbol">₪</span>
                         <br />
-                    }
-                    
-                            
-                            <div class="lineBetween"></div>
-                </div>
+                        @if (ogBudget < 0)
+                        {
+                            <span>הקטנת את התקציב ב- @(Math.Round((ogBudget * -1),2))%.</span>
+                            <br />
+                        }
+                        else if (ogBudget > 0)
+                        {
+                            <span>הגדלת את התקציב ב- @(Math.Round(ogBudget, 2))%.</span>
+                            <br />
+                        }
 
-                <div class="outerImportance">
-                    <label class="titleName" for="importance">עדיפות תת הקטגוריה</label>
-                    <div class="outerBtns">
-                        <div class="importanceBtns">
-                            @if (subCatToEdit.importance == 0)
-                            {
-                                <input type="radio" id="wants" name="importance" @onchange="@(() => subCatToEdit.importance = 0)" checked />
-                                <label class="" for="wants">רצון</label>
-                            }
-                            else
-                            {
-                                <input type="radio" id="wants" name="importance" @onchange="@(() => subCatToEdit.importance = 0)" />
-                                <label for="wants">רצון</label>
-                            }
-                            @if (subCatToEdit.importance == 1)
-                            {
-                                <input type="radio" id="needs" name="importance" @onchange="@(() => subCatToEdit.importance = 1)" checked />
-                                <label for="needs">צורך</label>
-                            }
-                            else
-                            {
-                                <input type="radio" id="needs" name="importance" @onchange="@(() => subCatToEdit.importance = 1)" />
-                                <label for="needs">צורך</label>
-                            }
-                            @if (subCatToEdit.importance == 2)
-                            {
-                                <input type="radio" id="must" name="importance" @onchange="@(() => subCatToEdit.importance = 2)" checked />
-                                <label for="must">חובה</label>
-                            }
-                            else
-                            {
-                                <input type="radio" id="must" name="importance" @onchange="@(() => subCatToEdit.importance = 2)" />
-                                <label for="must">חובה</label>
-                            }
+
+                        <div class="lineBetween"></div>
+                    </div>
+
+                    <div class="outerImportance">
+                        <label class="titleName" for="importance">עדיפות תת הקטגוריה</label>
+                        <div class="outerBtns">
+                            <div class="importanceBtns">
+                                @if (subCatToEdit.importance == 0)
+                                {
+                                    <input type="radio" id="wants" name="importance" @onchange="@(() => subCatToEdit.importance = 0)" checked />
+                                    <label class="" for="wants">רצון</label>
+                                }
+                                else
+                                {
+                                    <input type="radio" id="wants" name="importance" @onchange="@(() => subCatToEdit.importance = 0)" />
+                                    <label for="wants">רצון</label>
+                                }
+                                @if (subCatToEdit.importance == 1)
+                                {
+                                    <input type="radio" id="needs" name="importance" @onchange="@(() => subCatToEdit.importance = 1)" checked />
+                                    <label for="needs">צורך</label>
+                                }
+                                else
+                                {
+                                    <input type="radio" id="needs" name="importance" @onchange="@(() => subCatToEdit.importance = 1)" />
+                                    <label for="needs">צורך</label>
+                                }
+                                @if (subCatToEdit.importance == 2)
+                                {
+                                    <input type="radio" id="must" name="importance" @onchange="@(() => subCatToEdit.importance = 2)" checked />
+                                    <label for="must">חובה</label>
+                                }
+                                else
+                                {
+                                    <input type="radio" id="must" name="importance" @onchange="@(() => subCatToEdit.importance = 2)" />
+                                    <label for="must">חובה</label>
+                                }
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="outerExample">
-                    <div>
-                        <span class="example">לדוגמה:</span>
-                        לק - רצון, דלק - צורך, שכ״ד- חובה. העדיפות משפיעה על הטיפים לייעול התקציב.
+                    <div class="outerExample">
+                        <div>
+                            <span class="example">לדוגמה:</span>
+                            לק - רצון, דלק - צורך, שכ״ד- חובה. העדיפות משפיעה על הטיפים לייעול התקציב.
+                        </div>
                     </div>
-                </div>
+                }
+                else
+                {
+                    <div class="outerTitleName">
+                        <label class="titleName" for="amount">שם תת קטגוריה</label>
+                        <input class="titleBox" type="text" id="amount" placeholder="שם תת הקטגוריה" @bind="subCatToEdit.subCategoryTitle" />
+                    </div>
+                }
+
+
                 <div class="outerSaveBtns">
                     <button class="primery-button" @onclick="EditSubCategoryAndTransaction">שמירה ויצירת הזנה</button>
                     <button class="secondery-button" @onclick="saveUpdatedSubCat">שמירה וסיום</button>
@@ -187,7 +198,7 @@
 
             </div>
         </div>
-        </div>
+    </div>
 }
 
 
@@ -239,6 +250,12 @@
     [Parameter]
     public string? subCatColor { get; set; }
 
+    [Parameter]
+    public bool overdraftNotTreated { get; set; }
+
+    [Parameter]
+    public EventCallback<int> openOverdraftOverlay { get; set; }
+
     SubCategoryToEdit subCatToEdit = new SubCategoryToEdit();
     SubCategoryToUpdate subCategoryToUpdate = new SubCategoryToUpdate();
 
@@ -253,7 +270,7 @@
     public bool openTransOverlay = false;
     string? catOutlineColor = "";
 
-    double? ogBudget = 0;
+    double ogBudget = 0;
 
     protected override async Task OnInitializedAsync()
     {
@@ -263,12 +280,12 @@
             {
                 ogBudget = 0;
             }
-            else if ( budget.Value > 0 && subCatToEdit.monthlyPlannedBudget.Value > 0)
+            else if (budget.Value > 0 && subCatToEdit.monthlyPlannedBudget.Value > 0)
             {
-                ogBudget = budget;
+                ogBudget = budget.Value;
             }
         }
-        
+
     }
 
     public string convertCatColors(string catColor)
@@ -359,7 +376,10 @@
 
     }
 
-
+    public void triggerOverdraftOverlay()
+    {
+        openOverdraftOverlay.InvokeAsync(subCategoryIDToGet);
+    }
 
     public async Task getUserCategories()
     {
@@ -520,17 +540,18 @@
         {
             if (budget.HasValue && budget.Value > 0 && subCatToEdit.monthlyPlannedBudget.HasValue)
             {
-                double budgetGap = subCatToEdit.monthlyPlannedBudget.Value- budget.Value ;
-                ogBudget = ((budgetGap/budget.Value) * 100);
+                double budgetGap = subCatToEdit.monthlyPlannedBudget.Value - budget.Value;
+                ogBudget = ((budgetGap / budget.Value) * 100);
             }
-            else if (budget.Value <= 0 || subCatToEdit.monthlyPlannedBudget.Value<=0)
+            else if (budget.Value <= 0 || subCatToEdit.monthlyPlannedBudget.Value <= 0)
             {
                 ogBudget = 100;
-            }else if (budget.Value==subCatToEdit.monthlyPlannedBudget.Value)
+            }
+            else if (budget.Value == subCatToEdit.monthlyPlannedBudget.Value)
             {
                 ogBudget = 0;
             }
-            Console.WriteLine("ogBudget- " + ogBudget+", budget- "+budget);
+            Console.WriteLine("ogBudget- " + ogBudget + ", budget- " + budget);
         }
     }
 }
