--- a/Client/Pages/TransactionsOverview.razor
+++ b/Client/Pages/TransactionsOverview.razor
@@ -150,7 +150,7 @@
                             <div class="outerExample">
                                 <div>
                                     <span class="example">לדוגמה:</span>
-                                    לק - רוצה, דלק - צריך, שכ״ד- חייב. העדיפות משפיעה על הטיפים לייעול התקציב.
+                                    לק - רצון, דלק - צורך, שכ״ד- חובה. העדיפות משפיעה על הטיפים לייעול התקציב.
                                 </div>
                             </div>
                             <div class="outerSaveBtns">
@@ -317,16 +317,6 @@
 
                                                                 </div>
                                                             </div>
-
-
-
-
-                                                            @*@foreach (TagsToShow tag in subCatTagsList)
-                                                    {
-                                                    <input type="radio" name="subCatTags"  />
-                                                    <label>@tag.tagTitle</label>
-                                                    }*@
-
                                                             <button class="primery-button" @onclick="(()=>filterByTags(filterByTag))">סינון הוצאות</button>
                                                         </div>
                                                     }
